--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,12 +32,12 @@ jobs:
         run: |
           dart pub global run dart_frog_cli:dart_frog build
           dart pub get --offline
-          dart compile exe build/bin/server.dart -o build/bin/dream
+          dart compile exe build/bin/server.dart -o dream
 
       - name: Commit exe file
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: Github Actions Build
           branch: bin
-          file_pattern: build/bin/dream
+          file_pattern: /dream
           create_branch: true
