--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,13 @@ environment:
 
 dependencies:
   dart_frog: ^1.0.0
+  dio: ^5.3.3
+  json_annotation: ^4.8.1
+  shelf_cors_headers: ^0.1.5
 
 dev_dependencies:
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
   mocktail: ^1.0.0
   test: ^1.19.2
   very_good_analysis: ^5.1.0
