--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   dio: ^5.3.3
   json_annotation: ^4.8.1
   shelf_cors_headers: ^0.1.5
+  xml: ^6.4.2
 
 dev_dependencies:
   build_runner: ^2.4.6
